# panhou

./: .gitignore  README.md  deploy_step.sh  diag_us.sh  diagnose.sh  fix_env.sh  redeploy.sh  verify_jpkr.sh
.claude/: settings.local.json
.github/workflows/: deploy.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: admin.py  auth.py  qa.py  reports.py  schemas.py  stocks.py  user_byok.py
backend/app/auth/: crypto.py  security.py
backend/app/byok/: proxy.py
backend/app/db/: migrate.py  models.py  session.py
backend/app/llm/: providers.py
backend/app/notify/: email.py  email_codes.py  feishu.py  notifier.py
backend/app/pipeline/: _akshare_pool.py  cn_a_data.py  jp_kr_data.py  market_queries.py  retention.py  runner.py  summarizer.py  tavily_client.py  trading_calendar.py  us_data.py
backend/app/scheduler/: jobs.py
deploy/: README.md  backup.sh  env.example  install.sh  nginx.conf  update.sh
deploy/systemd/: tradeagent-backend.service  tradeagent-frontend.service
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AuthContext.tsx  BYOKForm.tsx  ChatWithReport.tsx  DateSwitcher.tsx  LimitUpLadder.tsx  MoverList.tsx  Nav.tsx  PinContext.tsx  SectorHeatmap.tsx  SectorTreemap.tsx  Sparkline.tsx  StockDeepDive.tsx  SummaryProse.tsx  ThemesNarrative.tsx
frontend/lib/: api.ts  byok.ts  format.ts  types.ts
(+5 files in other folders)
