[project]
name = "tradeagent-backend"
version = "0.1.0"
description = "Daily global stock market report backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "tavily-python>=0.5",
    "anthropic>=0.40",
    "openai>=1.55",
    "python-multipart>=0.0.18",
    "tenacity>=9.0",
    "akshare>=1.18",
    "json-repair>=0.30",
    "bcrypt>=4.0",
    "PyJWT>=2.9",
    "cryptography>=43",
    "chinesecalendar>=1.10",
    "holidays>=0.55",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
